syntax = "proto3";

package go.micro.srv.PostRet;

service Example {
	rpc PostRet(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
    //手机号
	string Mobile = 1;
	//密码
	string Password = 2;
	//短信验证码
	string Sms_code = 3;
}

message Response {
	string Error = 1;
	string Errmsg = 2;
	//将SessionId返回
	string SessionId = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
